fix(ARC-2224): push blade content to top if no footer, fix word wrap

--- a/src/modules/ie-objects/ObjectDetailPage.module.scss
+++ b/src/modules/ie-objects/ObjectDetailPage.module.scss
@@ -513,4 +513,10 @@ $breakpoint-md: map.get($breakpoints, "md");
 		margin-top: $spacer-sm;
 		max-width: fit-content;
 	}
+
+	&__metadata-blade {
+		:global(span) {
+			word-break: break-word !important;
+		}
+	}
 }
