--- a/src/modules/shared/components/Blade/Blade.module.scss
+++ b/src/modules/shared/components/Blade/Blade.module.scss
@@ -95,8 +95,11 @@
 		grid-row-start: 4;
 	}
 
-	&__footer {
+	&__flex-grow {
 		flex-grow: 1;
+	}
+
+	&__footer {
 		align-content: flex-end;
 	}
 
